доработка функционала по 16 спринту