@@ -1,5 +1,6 @@
 package ru.practicum.shareit.item.service.impl;
 
+import jakarta.persistence.EntityNotFoundException;
 import lombok.AccessLevel;
 import lombok.RequiredArgsConstructor;
 import lombok.experimental.FieldDefaults;
@@ -9,11 +10,14 @@ import ru.practicum.shareit.exception.UserNotFoundException;
 import ru.practicum.shareit.item.dto.ItemDto;
 import ru.practicum.shareit.item.model.Item;
 import ru.practicum.shareit.item.service.ItemService;
+import ru.practicum.shareit.request.ItemRequestRepository;
+import ru.practicum.shareit.request.model.ItemRequest;
 import ru.practicum.shareit.user.service.UserRepository;
 import ru.practicum.shareit.user.model.User;
 import ru.practicum.shareit.item.service.ItemRepository;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 
 @FieldDefaults(level = AccessLevel.PRIVATE)
@@ -24,34 +28,47 @@ public class ItemServiceImpl implements ItemService  {
     final ItemRepository itemRepository;
     final UserRepository userRepository;
 
+    private final ItemRequestRepository itemRequestRepository;
+
     @Override
-    public Item createItem(Long userId, Long ownerId, String name, String description, Boolean available) {
+    public Item createItem(Long userId, ItemDto itemDto) {
         User user = userRepository.findById(userId)
                 .orElseThrow(() -> new UserNotFoundException(userId));
 
         Item item = new Item();
         item.setOwnerId(user.getId());
-        item.setName(name);
-        item.setDescription(description);
-        item.setAvailable(available);
+        item.setName(itemDto.getName());
+        item.setDescription(itemDto.getDescription());
+        item.setAvailable(itemDto.isAvailable());
+
+
+        if (itemDto.getRequestId() != null) {
+            ItemRequest request = itemRequestRepository.findById(itemDto.getRequestId())
+                    .orElseThrow(() -> new EntityNotFoundException("Запрос не найден"));
+            item.setRequestId(request.getId());
+        }
 
         return itemRepository.save(item);
     }
 
-//    @Override
-//    public Item createItem(Long userId, Long ownerId, String name, String description, boolean available) throws IllegalAccessException {
-//        if (name == null || name.isEmpty()) {
-//            throw new InvalidItemException("Название не может быть пустым");
-//        }
-//
-//        Item item = new Item(IdGenerator.nextId(), ownerId, name, description, available);
-//        items.add(item);
-//        return item;
-//    }
-
     @Override
     public Item updateItem(Long userId, Long itemId, ItemDto itemDto) {
-        return null;
+        Item item = itemRepository.findById(itemId)
+                .orElseThrow(() -> new ItemNotFoundException(itemId));
+
+        if (!item.getOwnerId().equals(userId)) {
+            throw new IllegalArgumentException("Только владелец может обновлять предмет");
+        }
+
+        if (itemDto.getName() != null) {
+            item.setName(itemDto.getName());
+        }
+        if (itemDto.getDescription() != null) {
+            item.setDescription(itemDto.getDescription());
+        }
+        item.setAvailable(itemDto.isAvailable());
+
+        return itemRepository.save(item);
     }
 
     @Override
@@ -64,12 +81,15 @@ public class ItemServiceImpl implements ItemService  {
 
     @Override
     public List<Item> getAllItemsByOwner(Long userId) {
-        return List.of();
+        return itemRepository.findByOwnerId(userId);
     }
 
     @Override
     public List<Item> searchItems(String text) {
-        return List.of();
+        if (text == null || text.isEmpty()) {
+            return Collections.emptyList();
+        }
+        return itemRepository.findByNameContainingIgnoreCase(text);
     }
 
     @Override
